--- a/.github/workflows/ci_repo_dispatch.yml
+++ b/.github/workflows/ci_repo_dispatch.yml
@@ -21,14 +21,14 @@ jobs:
 
       - name: Build base image
         run: |
-          docker build -t jepsen-hstream:base ./docker/base/
+          ./script/build_base.sh
 
-      - name: Build test images
+      - name: Build test images (legacy)
         run: |
-          docker-compose --file ./docker/docker-compose.yml \
-                         --compatibility \
-                         -p jepsen \
-                         build
+          ./script/build_legacy.sh
+      - name: Build test images (kafka)
+        run: |
+          ./script/build_kafka.sh
 
       - name: Clean dangling images
         run: |
@@ -38,24 +38,35 @@ jobs:
         run: |
           df -h
 
-      - name: Start test cluster and run jepsen test
+      - name: Start test cluster and run jepsen test (legacy)
         run: |
-          docker-compose --file ./docker/docker-compose.yml \
-                         --compatibility \
-                         -p jepsen \
-                         up \
-                         --renew-anon-volumes \
-                         --exit-code-from control
+          ./script/up_legacy.sh
 
-      - name: 'Upload Artifact'
+      - name: Cleanup resources (legacy)
+        run: |
+          ./script/clean_legacy.sh
+
+      - name: Start test cluster and run jepsen test (kafka)
+        run: |
+          ./script/up_kafka.sh
+
+      - name: Cleanup resources (kafka)
+        run: |
+          ./script/clean_kafka.sh
+
+      - name: Upload Artifact
         uses: actions/upload-artifact@v2
         if: ${{ success() }} || ${{ failure() }}
         with:
           name: jepsen-test-result
           path: |
-            store/HStream
+            store/legacy-husky
+            store/legacy-list-append
+            store/kafka
             /tmp/*.log
-            !store/HStream/latest
+            !store/latest
+            !store/current
+          retention-days: 7
 
       - name: Post to Slack channel
         if: ${{ success() }} || ${{ failure() }}
