--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,10 @@ on:
     branches: [main, master]
 
 jobs:
-  jepsen-test:
+  legacy-test:
     runs-on: ubuntu-latest
-    name: The simplest jepsen test for HStreamDB
-    timeout-minutes: 60
+    name: Jepsen test for hstream legacy mode
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v2
         with:
@@ -24,18 +24,11 @@ jobs:
 
       - name: Build base image
         run: |
-          ./script/build_base.sh
+          ./scripts/build_base.sh
 
       - name: Build test images (legacy)
         run: |
-          ./script/build_legacy.sh
-      - name: Build test images (kafka)
-        run: |
-          ./script/build_kafka.sh
-
-      - name: Clean dangling images
-        run: |
-          docker image prune -f
+          ./scripts/build_legacy.sh
 
       - name: Check disk space
         run: |
@@ -43,19 +36,58 @@ jobs:
 
       - name: Start test cluster and run jepsen test (legacy)
         run: |
-          ./script/up_legacy.sh
+          ./scripts/up_legacy.sh
 
       - name: Cleanup resources (legacy)
         run: |
-          ./script/clean_legacy.sh
+          ./scripts/clean_legacy.sh
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        if: ${{ success() }} || ${{ failure() }}
+        with:
+          name: legacy-result
+          path: |
+            store/legacy-husky
+            store/legacy-list-append
+            /tmp/*.log
+            !store/latest
+            !store/current
+          retention-days: 7
+
+  kafka-test:
+    runs-on: ubuntu-latest
+    name: Jepsen test for hstream kafka mode
+    timeout-minutes: 20
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: "recursive"
+
+      - name: Prepare environment for test
+        run: |
+          cd ./docker
+          ./init-secret.sh
+
+      - name: Build base image
+        run: |
+          ./scripts/build_base.sh
+
+      - name: Build test images (kafka)
+        run: |
+          ./scripts/build_kafka.sh
+
+      - name: Check disk space
+        run: |
+          df -h
 
       - name: Start test cluster and run jepsen test (kafka)
         run: |
-          ./script/up_kafka.sh
+          ./scripts/up_kafka.sh
 
       - name: Cleanup resources (kafka)
         run: |
-          ./script/clean_kafka.sh
+          ./scripts/clean_kafka.sh
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
@@ -63,8 +95,6 @@ jobs:
         with:
           name: jepsen-test-result
           path: |
-            store/legacy-husky
-            store/legacy-list-append
             store/kafka
             /tmp/*.log
             !store/latest
