--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,10 @@ on:
     branches: [main, master]
 
 jobs:
-  jepsen-test:
+  legacy-test:
     runs-on: ubuntu-latest
-    name: The simplest jepsen test for HStreamDB
-    timeout-minutes: 60
+    name: Jepsen test for hstream legacy mode
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v2
         with:
@@ -24,30 +24,70 @@ jobs:
 
       - name: Build base image
         run: |
-          docker build -t jepsen-hstream:base ./docker/base/
+          ./scripts/build_base.sh
 
-      - name: Build test images
+      - name: Build test images (legacy)
         run: |
-          docker-compose --file ./docker/docker-compose.yml \
-                         --compatibility \
-                         -p jepsen \
-                         build
-      - name: Clean dangling images
-        run: |
-          docker image prune -f
+          ./scripts/build_legacy.sh
 
       - name: Check disk space
         run: |
           df -h
 
-      - name: Start test cluster and run jepsen test
+      - name: Start test cluster and run jepsen test (legacy)
         run: |
-          docker-compose --file ./docker/docker-compose.yml \
-                         --compatibility \
-                         -p jepsen \
-                         up \
-                         --renew-anon-volumes \
-                         --exit-code-from control
+          ./scripts/up_legacy.sh
+
+      - name: Cleanup resources (legacy)
+        run: |
+          ./scripts/clean_legacy.sh
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        if: ${{ success() }} || ${{ failure() }}
+        with:
+          name: legacy-result
+          path: |
+            store/legacy-husky
+            store/legacy-list-append
+            /tmp/*.log
+            !store/latest
+            !store/current
+          retention-days: 7
+
+  kafka-test:
+    runs-on: ubuntu-latest
+    name: Jepsen test for hstream kafka mode
+    timeout-minutes: 20
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: "recursive"
+
+      - name: Prepare environment for test
+        run: |
+          cd ./docker
+          ./init-secret.sh
+
+      - name: Build base image
+        run: |
+          ./scripts/build_base.sh
+
+      - name: Build test images (kafka)
+        run: |
+          ./scripts/build_kafka.sh
+
+      - name: Check disk space
+        run: |
+          df -h
+
+      - name: Start test cluster and run jepsen test (kafka)
+        run: |
+          ./scripts/up_kafka.sh
+
+      - name: Cleanup resources (kafka)
+        run: |
+          ./scripts/clean_kafka.sh
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
@@ -55,7 +95,8 @@ jobs:
         with:
           name: jepsen-test-result
           path: |
-            store/HStream
+            store/kafka
             /tmp/*.log
-            !store/HStream/latest
+            !store/latest
+            !store/current
           retention-days: 7
