[skip ci] ci: minor fixes on artifact name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,8 @@ jobs:
             /tmp/*.log
             !store/latest
             !store/current
+            !store/legacy-husky/latest
+            !store/legacy-list-append/latest
           retention-days: 7
 
   kafka-test:
@@ -93,10 +95,11 @@ jobs:
         uses: actions/upload-artifact@v2
         if: ${{ success() }} || ${{ failure() }}
         with:
-          name: jepsen-test-result
+          name: kafka-result
           path: |
             store/kafka
             /tmp/*.log
             !store/latest
             !store/current
+            !store/kafka/latest
           retention-days: 7
