--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,11 +48,8 @@ jobs:
         with:
           name: legacy-result
           path: |
-            store/legacy-husky
-            store/legacy-list-append
+            store/
             /tmp/*.log
-            !store/latest
-            !store/current
           retention-days: 7
 
   kafka-test:
@@ -93,10 +90,8 @@ jobs:
         uses: actions/upload-artifact@v2
         if: ${{ success() }} || ${{ failure() }}
         with:
-          name: jepsen-test-result
+          name: kafka-result
           path: |
-            store/kafka
+            store/
             /tmp/*.log
-            !store/latest
-            !store/current
           retention-days: 7
