bug fixed: the max server id of kafka server should be Int32 rather than Word32

--- a/docker/control-kafka/Dockerfile
+++ b/docker/control-kafka/Dockerfile
@@ -60,6 +60,8 @@ CMD /init-ssh.sh && \
     --sub-via subscribe \
     --time-limit 120 \
     --final-time-limit 120 \
+    # This value is enough. A larger one can make elle exhausted.
+    --concurrency 5 \
     ## We do not support txns and idempotent for now.
     ## So we disable it.
     --no-txn \
