kafka test: tidy test options

--- a/docker/control-kafka/Dockerfile
+++ b/docker/control-kafka/Dockerfile
@@ -53,8 +53,9 @@ CMD /init-ssh.sh && \
     lein deps && \
     unset http_proxy && \
     unset https_proxy && \
-    # start test
+    ####################### start test #######################
     lein with-profile kafka run test \
+    #-------------- basic options --------------#
     --db hstream \
     --workload queue \
     --sub-via subscribe \
@@ -62,39 +63,57 @@ CMD /init-ssh.sh && \
     --final-time-limit 120 \
     --key-dist uniform \
     --key-count 32 \
-    ## When writes of a key exceed the limit, the generator will pick
-    ## a new key (which can be larger than 'key-count'!!!), which is
-    ## very confusing. So we set a very large limit here.
-    --max-writes-per-key 102400 \
+    ##<<<
     # This value is enough. A larger one can make elle exhausted.
-    --concurrency 5 \
-    ## The default number of partitions is 1, which may be different
-    ## from the test. This can make some partitions unusable. So we
-    ## never create topics automatically.
+    --concurrency 20 \
+    ##>>>
+    ##<<<
+    # When writes of a key exceed the limit, the generator will pick
+    # a new key (which can be larger than 'key-count'!!!), which is
+    # very confusing. So we set a very large limit here.
+    --max-writes-per-key 102400 \
+    ##>>>
+    #-------------- kafka client options --------------#
+    ##<<<
+    # The default number of partitions is 1, which may be different
+    # from the test. This can make some partitions unusable. So we
+    # never create topics automatically.
     --disable-server-auto-create-topics \
-    ## disable producer retry
+    ##>>>
+    ##<<<
+    # We disable producer retry now to avoid dupicate writes.
+    # It may be turned on in the future to perform more tests...
     --retries 0 \
-    ## We do not support txns and idempotent for now.
-    ## So we disable it.
+    ##>>>
+    #-------------- txns options --------------#
+    ##<<<
+    # We do not support txns and idempotent for now.
+    # So we disable it.
     --no-txn \
     --no-idempotence \
     --no-server-idempotence \
-    ## The following options controls nemesises.
+    ##>>>
+    #-------------- nemesis options --------------#
     --nemesis none \
     --crash-clients true \
     # --crash-client-interval 30 \ # FIXME: parse error, what happened?
     # --tcpdump \ # TODO: sadly, tcpdump is only available for redpanda.
-    ## The following opts is client default but we
-    ## specify them explicitly here for clarity.
+    #-------------- default options --------------#
+    ##<<<
+    # The following opts is client default (3.7.0) but we
+    # specify them explicitly here for clarity.
     --auto-offset-reset latest \
     --enable-auto-commit \
     --enable-server-auto-create-topics \
     --isolation-level read_uncommitted \
     --acks all && \
-    ## For kafka test, the following options are hard-coded,
-    ## see workload/queue.clj and workload/list_append.clj.
-    ## - replication-factor = 3
-    ## - partition-count = 4
-    ## - poll-ms = 100
-    ## - ... TODO
+    ##>>>
+    ##<<<
+    # For kafka test, the following options are hard-coded,
+    # see workload/queue.clj and workload/list_append.clj.
+    # - replication-factor = 3
+    # - partition-count = 4
+    # - poll-ms = 100
+    # - ... TODO
+    ##>>>
     exit
