add extra bytes for kafka payload

--- a/docker/docker-compose-hornbill.yml
+++ b/docker/docker-compose-hornbill.yml
@@ -101,6 +101,7 @@ services:
       jepsen-hornbill-network:
         ipv4_address: 172.20.0.8
     volumes:
+      - "../:/home/Work"
       - "jepsen-hornbill-shared:/var/jepsen/shared"
       - "/home/commelina/.m2/:/root/.m2"
 
