add extra bytes for kafka payload (#26)
* add extra bytes for kafka payload

* minor updates for hornbill

--- a/docker/docker-compose-hornbill.yml
+++ b/docker/docker-compose-hornbill.yml
@@ -101,8 +101,8 @@ services:
       jepsen-hornbill-network:
         ipv4_address: 172.20.0.8
     volumes:
+      - "../:/home/Work"
       - "jepsen-hornbill-shared:/var/jepsen/shared"
-      - "/home/commelina/.m2/:/root/.m2"
 
   hserver-1:
     << : *hserver-node
