--- a/docker/control-hornbill/Dockerfile
+++ b/docker/control-hornbill/Dockerfile
@@ -27,10 +27,10 @@ CMD /init-ssh-control.sh && \
     --db hornbill \
     --workload queue \
     --sub-via subscribe \
-    --time-limit 180 \
-    --final-time-limit 120 \
+    --time-limit 360 \
+    --final-time-limit 60 \
     --key-dist uniform \
-    --key-count 32 \
+    --key-count 4 \
     ##<<<
     # This value is enough. A larger one can make elle exhausted.
     --concurrency 10 \
@@ -57,8 +57,12 @@ CMD /init-ssh-control.sh && \
     ##<<<
     # We allow the producer to send messages in batch, but do not
     # be too large.
-    --producer-linger-ms 2000 \
+    --producer-linger-ms 3000 \
     --batch-max-bytes 10240 \
+    ##>>>
+    # auto reset offset to earliest to prevent "offset not start from 0"
+    ##<<<
+    --auto-offset-reset earliest \
     ##>>>
     #-------------- txns options --------------#
     ##<<<
@@ -69,7 +73,7 @@ CMD /init-ssh-control.sh && \
     --no-server-idempotence \
     ##>>>
     #-------------- nemesis options --------------#
-    --nemesis all \
+    --nemesis none \
     --nemesis-interval 15 \
     --crash-clients true \
     --tcpdump \
@@ -79,9 +83,7 @@ CMD /init-ssh-control.sh && \
     ##<<<
     # The following opts is client default (3.7.0) but we
     # specify them explicitly here for clarity.
-    --auto-offset-reset latest \
     --enable-auto-commit \
-    --enable-server-auto-create-topics \
     --isolation-level read_uncommitted \
     --acks all && \
     ##>>>
