--- a/docker/base-hornbill/Dockerfile
+++ b/docker/base-hornbill/Dockerfile
@@ -1,4 +1,4 @@
-ARG HORNBILL_IMAGE="hstreamdb/hornbill:latest"
+ARG HORNBILL_IMAGE="ghcr.io/hstreamdb/hornbill:latest"
 FROM ${HORNBILL_IMAGE}
 
 ENV DEBIAN_FRONTEND=noninteractive
@@ -60,6 +60,10 @@ RUN apt-get -qy --no-install-recommends install \
 
 # Config SSH for Jepsen connection
 COPY ./init-ssh.sh /usr/local/bin/init-ssh
+
+# Install FoundationDB cli tool
+COPY --from=foundationdb/foundationdb:7.3.43 /usr/bin/fdbcli /usr/bin/fdbcli
+RUN chmod +x /usr/bin/fdbcli
 
 EXPOSE 22
 
